--- a/module-1/Assessments/week-5-try-2/pom.xml
+++ b/module-1/Assessments/week-5-try-2/pom.xml
@@ -7,6 +7,14 @@
     <groupId>org.example</groupId>
     <artifactId>assessment</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit-dep</artifactId>
+            <version>4.9</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
